fix spacing of connections label and icon in 'show connections' mode

--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -53,6 +53,10 @@
       display: inline-block;
     }
 
+    .show-connections-condition .hide-unless-condition:first-child {
+      display: inline;
+    }
+
     .sequence-grid {
       display: grid;
       margin-left: -15px;
